--- a/send/index.html
+++ b/send/index.html
@@ -856,7 +856,7 @@
                 QRSync
             </a>
             <div class="nav-links">
-                <a href="../receive/index.html">接收端 →</a>
+                <a href="../receiver/index.html">接收端 →</a>
             </div>
         </div>
     </nav>
