--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <p class="subtitle">纯浏览器孤岛文件传输工具</p>
         
         <div class="cards">
-            <a href="send/index.html" class="card">
+            <a href="sender/index.html" class="card">
                 <div class="card-icon">📤</div>
                 <div class="card-title">发送端</div>
                 <div class="card-desc">选择文件，生成二维码序列</div>
