--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     </a>
     
     <div class="container">
-        <div class="logo">📡</div>
+        <img src="/icon/QRSync_icon.png" alt="Logo" width="32" height="32">
         <h1>QRSync</h1>
         <p class="subtitle">纯浏览器孤岛文件传输工具</p>
         
