--- a/sender/index.html
+++ b/sender/index.html
@@ -853,7 +853,7 @@
         <div class="nav-content">
             <a href="../index.html" class="logo">
                 <div class="logo-icon">
-                  <img src="/icon/QRSync_icon.png" alt="Logo" width="32" height="32">
+                  <img src="icon/QRSync_icon.png" alt="Logo" width="100%" height="100%">
                 </div>
                 QRSync
             </a>
