--- a/sender/index.html
+++ b/sender/index.html
@@ -858,7 +858,7 @@
                 QRSync
             </a>
             <div class="nav-links">
-                <a href="../receiver/index.html">接收端 →</a>
+                <a href="../receiver/index.html">接收端➡️</a>
             </div>
         </div>
     </nav>
