--- a/receiver/index.html
+++ b/receiver/index.html
@@ -838,7 +838,7 @@
                 QRSync
             </a>
             <div class="nav-links">
-                <a href="../sender/index.html">发送端 →</a>
+                <a href="../sender/index.html">发送端➡️</a>
             </div>
         </div>
     </nav>
