--- a/sender/index.html
+++ b/sender/index.html
@@ -917,7 +917,7 @@
                 <input type="range" id="chunkSizeSlider" min="400" max="1200" value="600" step="50">
                 <div class="slider-marks">
                     <span>400B</span>
-                    <span>600B</span>
+                    <!-- <span>600B</span> -->
                     <span>1200B</span>
                 </div>
                 <div class="slider-hint" id="chunkSizeHint">⚠️ 更改此设置需要重新生成二维码</div>
@@ -931,7 +931,7 @@
                 <input type="range" id="qrSizeSlider" min="256" max="800" value="400" step="16">
                 <div class="slider-marks">
                     <span>256px</span>
-                    <span>400px</span>
+                    <!-- <span>400px</span> -->
                     <span>800px</span>
                 </div>
                 <div class="slider-hint" id="qrSizeHint">⚠️ 更改此设置需要重新点击"生成二维码"</div>
